~~~~~~~~~~~~~~~~~~~

 * Fix: Migration for addition of `Page.draft_title` field is now reversible (Venelin Stoykov)
 * Fix: Fixed failure on application startup when `ManifestStaticFilesStorage` is in use and `collectstatic` has not yet been run (Matt Westcott)
 * Fix: Fixed handling of Vimeo and other oEmbed providers with a format parameter in the endpoint URL (Mitchel Cabuloy)


1.12.1 (30.08.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Prevent home page draft title from displaying as blank (Mikalai Radchuk, Matt Westcott)
 * Fix: Fix regression on styling of preview button with more than one preview mode (Jack Paine)
 * Fix: Enabled translations within date-time chooser widget (Lucas Moeskops)


1.12 LTS (21.08.2017)
~~~~~~~~~~~~~~~~~~~~~

 * Ability to configure the feature set of rich text fields on a per-field basis (Matt Westcott)
 * New class-based configuration for media embeds (Karl Hobley)
 * The admin interface now displays a title of the latest draft (Mikalai Radchuk)
 * `RoutablePageMixin` now has a default "index" route (Andreas Nüßlein, Matt Westcott)
 * Added multi-select form field to the form builder (dwasyl)
 * Improved performance of sitemap generation (Levi Adler)
 * StreamField now respects the `blank` setting; StreamBlock accepts a `required` setting (Loic Teixeira)
 * StreamBlock now accepts `min_num`, `max_num` and `block_counts` settings to control the minimum and maximum numbers of blocks (Edwar Baron, Matt Westcott)
 * Users can no longer remove their own active / superuser flags through Settings -> Users (Stein Strindhaug, Huub Bouma)
 * The `process_form_submission` method of form pages now return the created form submission object (cho-leukeleu)
 * Added `WAGTAILUSERS_PASSWORD_ENABLED` and `WAGTAILUSERS_PASSWORD_REQUIRED` settings to permit creating users with no Django-side passwords, to support external authentication setups (Matt Westcott)
 * Added help text parameter to `DecimalBlock` and `RegexBlock` (Tomasz Knapik)